Fix wrapping of action buttons on upload page on narrow devices

--- a/ui/src/app/components/upload/upload.component.scss
+++ b/ui/src/app/components/upload/upload.component.scss
@@ -46,6 +46,10 @@ ion-select {
         text-align: right;
       }
     }
+
+    .actions {
+      min-width: 260px;
+    }
   }
 }
 
